# Buddies

./: .gitignore  HANDOFF.md  README.md
.claude/rules/: buddy-learned.md  decisions.md  model-routing.md  preferences.md  project-context.md  project-map.md
buddies/: launch.bat  launch.sh  pyproject.toml  setup.bat  setup.sh
buddies/scripts/: render_sprites.py
buddies/src/buddies/: __init__.py  __main__.py  app.py  config.py  (+5 more)
buddies/tests/: test_achievements.py  test_ai_backend.py  test_arcade_multiplayer.py  test_arcade_transport.py  test_bbs.py  test_cc_companion.py  test_cc_dialogue.py  test_code_map.py  test_config_intel.py  test_crawl.py  test_fusion.py  test_game_balance.py  test_games.py  test_memory.py  test_mud.py  test_mud_multiplayer.py  test_mud_save.py  test_mud_transport.py  test_multiplayer.py  test_negotiate.py  test_personality_drift.py  test_prompt_builder.py  test_prose.py  test_screens.py  test_stackwars.py  test_token_guardian.py  test_user_character.py
buddy/: pyproject.toml
buddy/src/buddy/: __init__.py  __main__.py  app.py  config.py  first_run.py
buddy/src/buddy/art/: animations.py  sprites.py
buddy/src/buddy/core/: ai_backend.py  ai_router.py  buddy_brain.py  hooks.py  rule_suggester.py  session_observer.py
buddy/src/buddy/db/: models.py  store.py
buddy/src/buddy/mcp/: server.py
buddy/src/buddy/screens/: party.py
buddy/src/buddy/widgets/: buddy_display.py  chat.py  session_monitor.py  status_bar.py
buddy/styles/: buddy.tcss
session-notes/: 2026-03-31-session-1.md  2026-03-31-session-2.md  PLAN-buddies-refactor.md
(+99 files in other folders)
