[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buddies"
version = "0.2.0"
description = "A tamagotchi-style AI companion collection that runs alongside Claude Code"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0.0",
    "rich>=14.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
ai = ["litellm>=1.60.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.25.0"]

[project.scripts]
buddy = "buddy.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/buddy"]
